# Assignment-2

./: DirectStiffness.py  README.md  assignment_2_genAIuse.txt  math_utils.py  pyproject.toml  test_DirectStiffness.py  tutorial.py
.github/workflows/: test.yml
DirectStiffness/: README.md  example1.py  example1_1.py  example1_2.py  example2.py  example2_1.py  example2_2.py  example_postprocess.py  example_postprocess1.py  example_postprocess2.py  example_postprocess3.py  example_sectry1.py  example_sectry2.py  example_sectry3.py  tutorial.py  tutorial_example.py
DirectStiffness/.pytest_cache/: lastfailed
DirectStiffness/.pytest_cache/v/cache/: lastfailed  nodeids
DirectStiffness/src/: DirectStiffness.py  ElasticCriticalLoad.py  PostProcess.py
DirectStiffness/tests/: test_DirectStiffness.py  test_ElasticCriticalLoad.py
